--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,4 @@
-\documentclass[whitelogo]{TUD-report2020}
+\documentclass[whitelogo]{tudelft-report}
 
 \usepackage{biblatex}
 \addbibresource{report.bib}
@@ -40,8 +40,8 @@
 \covertext[tudelft-white]{
     \textbf{Cover Text} \\
     possibly \\
-    spanning 
-    multiple 
+    spanning
+    multiple
     lines
     \vfill
     ISBN 000-00-0000-000-0
