--- a/cover.tex
+++ b/cover.tex
@@ -1,4 +1,4 @@
-\documentclass{TUD-report2020}
+\documentclass{tudelft-report}
 
 %% We need to increase the paper size to slightly larger than twice A4 to make
 %% room for a front and back cover, including the spine.
@@ -22,7 +22,7 @@
 }
 
 %% The 'back' option enables the generation of the back cover.
-\makecover[back,whitelogo]
+\makecover[back, whitelogo]
 
 \end{document}
 
