--- a/chapter-1.tex
+++ b/chapter-1.tex
@@ -1,3 +1,4 @@
+% !TeX root = report.tex
 \chapter{Introduction}
 
 This document is intended to be both an example of the TU Delft \LaTeX{} template for reports and theses, as well as a short introduction to its use. It is not intended to be a general introduction to \LaTeX{} itself,\footnote{We recommend \url{http://en.wikibooks.org/wiki/LaTeX} as a reference and a starting point for new users.} and we will assume the reader to be familiar with the basics of creating and compiling documents.
@@ -22,9 +23,9 @@ This template has the option to automatically generate a cover page with the \ve
 
 The contents of the report are included between the \verb|\begin{document}| and \verb|\end{document}| commands, and split into three parts by
 \begin{enumerate}
-\item\verb|\frontmatter|, which uses Roman numerals for the page numbers and is used for the title page and the table of contents;
-\item\verb|\mainmatter|, which uses Arabic numerals for the page numbers and is the style for the chapters;
-\item\verb|\appendix|, which uses letters for the chapter numbers, starting with `A'.
+    \item\verb|\frontmatter|, which uses Roman numerals for the page numbers and is used for the title page and the table of contents;
+    \item\verb|\mainmatter|, which uses Arabic numerals for the page numbers and is the style for the chapters;
+    \item\verb|\appendix|, which uses letters for the chapter numbers, starting with `A'.
 \end{enumerate}
 The title page is defined in a separate file, \emph{e.g.}, \texttt{title.tex}, and included verbatim with \verb|\input{title}|.\footnote{Note that it is not necessary to specify the file extension.} Additionally, it is possible to include a preface, containing, for example, the acknowledgements. An example can be found in \texttt{preface.tex}. The table of contents is generated automatically with the \verb|\tableofcontents| command. Chapters are included after \verb|\mainmatter| and appendices after \verb|\appendix|. For example, \verb|input{chapter-1}| includes \texttt{chapter-1.tex}, which contains this introduction.
 
@@ -36,18 +37,18 @@ The present document has the following preamble
 \usepackage[style=apa]{biblatex}
 \addbibresource{report.bib}
 \end{verbatim}
-The first line tells us that the references will be formatted according 
+The first line tells us that the references will be formatted according
 to the APA-standards.
-On \texttt{Overleaf} this should adhere to the 7th version of these 
+On \texttt{Overleaf} this should adhere to the 7th version of these
 standards.
-On your own computer the version of biblatex may be older and 
+On your own computer the version of biblatex may be older and
 use the 6th~version.
 
 The second line points to a file that contains the references in a database
 like format.
 Use one such line for every database that you want to use.
 
-The general way this works is as follows Using the present document as 
+The general way this works is as follows Using the present document as
 an example):
 \begin{verbatim}
 xelatex report
@@ -55,7 +56,7 @@ biber report
 xelatex report
 \end{verbatim}
 The first line typesets the document and gathers information for the lists
-of references; the second line will generate lists of references for all 
+of references; the second line will generate lists of references for all
 chapters, these will be read in during execution of the third and fourth lines.
 Depending on the editor that you use much of this can be done by clicking
 on a suitable icon or by hitting suitably defined hot keys.
@@ -74,9 +75,6 @@ To give some examples we cite an article: \cite{Einstein1906},
 a book: \cite{MR1039321}, another article: \cite{MR3860876},
 and a book with more than one editor: \cite{MR3204729}.
 
-
-
-
 \section{Cover and Title Page}
 
 This template will automatically generate a cover page if you issue the \verb|\makecover| command. There are two formats for the cover page: one with a page-filling (`bleeding')
@@ -86,31 +84,31 @@ a page with the illustration on the lower half. All illustrations are bleeding, 
 
 Before generating the cover, you need to provide the information to put on it. This can be done with the following commands:
 \begin{itemize}
-\item\verb|\title[Optional Color]{Title}| \\
+    \item\verb|\title[Optional Color]{Title}| \\
     This command is used to provide the title of the document. The title
     title is also printed on the spine. If you use a title page (see below), this information will be used there as well.
     As the title, subtitle and author name are printed directly over the cover photo, it will often be necessary to adjust the print color in order to have
     sufficient contrast between the text and the background. The optional color argument is used for this.
-\item\verb|\title[Optional Color]{Subtitle}| \\
+    \item\verb|\title[Optional Color]{Subtitle}| \\
     This command is used to provide a subtitle for the document. If you use a title page (see below), this information will be used there as well.
     It possible to adjust the print color in order to have
     sufficient contrast between the text and the background -- the optional color argument is used for this.
-\item\verb|\author{J.\ Random Author}| \\
+    \item\verb|\author{J.\ Random Author}| \\
     This command specifies the author. The default color is \texttt{tudelft-white}, but this may be adjusted in the same way as the titles.
-\item\verb|\affiliation{Technische Universiteit Delft}| \\
+    \item\verb|\affiliation{Technische Universiteit Delft}| \\
     The affiliation is the text printed vertically on the front cover. It can be the affiliation, such as the university or department name, or be used for the document type (\emph{e.g.}, Master's thesis). The default color is again \texttt{tudelft-white}, adjustable through the \texttt{color} option.
-\item\verb|\coverimage{cover.jpg}| \\
+    \item\verb|\coverimage{cover.jpg}| \\
     With this command you can specify the filename of the cover image. The image is stretched to fill the full width of the front cover (including the spine if a back cover is present).
-\item\verb|\covertext{Cover Text}| \\
+    \item\verb|\covertext{Cover Text}| \\
     If a back cover is present, the cover text is printed on the back. Internally, this text box is created using the \LaTeX{} \texttt{minipage} environment, so it supports line breaks.
-\item\verb|\titleoffsetx{OffsetX},\titleoffsety{OffsetY}|
-    If the cover page contains a page-filling picture (i.e., \texttt{split} is not specified with the \texttt{makecover} command, the best position of the title depends a lot on the picture chosen for it. The lower left corner of the minipage containing title, subtitle and author is 
-    specified by these two commands. The offsets are measured from the top left corner of the page. 
-\item\verb|\afiloffsetx{AfilX\}, \afiloffsety{AfilY}|
-    specifies the lower left corner of the text containing the affiliation, measured from the top left corner of the page. 
+    \item\verb|\titleoffsetx{OffsetX},\titleoffsety{OffsetY}|
+    If the cover page contains a page-filling picture (i.e., \texttt{split} is not specified with the \texttt{makecover} command, the best position of the title depends a lot on the picture chosen for it. The lower left corner of the minipage containing title, subtitle and author is
+    specified by these two commands. The offsets are measured from the top left corner of the page.
+    \item\verb|\afiloffsetx{AfilX\}, \afiloffsety{AfilY}|
+    specifies the lower left corner of the text containing the affiliation, measured from the top left corner of the page.
 \end{itemize}
 
-In addition to \texttt{[split]}, the \verb|\makecover| command accepts several additional options for customizing the layout of the cover. 
+In addition to \texttt{[split]}, the \verb|\makecover| command accepts several additional options for customizing the layout of the cover.
 The most important of these is \texttt{back}. Supplying this option will generate a back cover as well as a front, including the spine. Since this requires a page size slightly larger than twice A4 (to make room for the spine), and \LaTeX{} does not support different page sizes within the same document, it is wise to create a separate file for the cover. \texttt{cover.tex} contains an example. The recommended page size for the full cover can be set with
 \begin{verbatim}
     \geometry{papersize={1226bp,851bp}}
@@ -119,17 +117,17 @@ after the document class and before \verb|\begin{document}|.
 
 The other options \verb|\makecover| accepts are
 \begin{itemize}
-\item\texttt{nospine} \\
+    \item\texttt{nospine} \\
     If a back cover is generated, the title will also be printed in a black box on the spine. However, for smaller documents the spine might not be wide enough. Specifying this option disables printing the title on the spine.
-\item\texttt{frontbottom} \\
+    \item\texttt{frontbottom} \\
     By default the black box on the front is situated above the blue box. Specifying this option will place the black box below the blue one.
-\item\texttt{spinewidth} \\
+    \item\texttt{spinewidth} \\
     If a back cover is present, this option can be used to set the width of the spine. The default is \texttt{spinewidth=1cm}.
-\item\texttt{frontboxwidth}, \texttt{frontboxheight}, \texttt{backboxwidth}, \texttt{backboxheight} \\
+    \item\texttt{frontboxwidth}, \texttt{frontboxheight}, \texttt{backboxwidth}, \texttt{backboxheight} \\
     As their names suggest, these options are used to set the width and height of the front (black) and back (blue) boxes. The default widths and heights are \texttt{4.375in} and \texttt{2.1875in}, respectively.
-\item\texttt{x}, \texttt{y} \\
+    \item\texttt{x}, \texttt{y} \\
     The blue and black boxes touch each other in a corner. The location of this corner can be set with these options. It is defined with respect to the top left corner of the front cover. The default values are \texttt{x=0.8125in} and \texttt{y=3in}.
-\item\texttt{margin} \\
+    \item\texttt{margin} \\
     This option sets the margin between the borders of the boxes and their text. The default value is \texttt{12pt}.
 \end{itemize}
 
@@ -164,24 +162,37 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 \section{Fonts and Colors}
 
-The fonts used by this template depend on which version of \LaTeX{} you use. Regular \LaTeX, \emph{i.e.}, if you compile your document with with \texttt{latex}, \texttt{pslatex} or \texttt{pdflatex}, will use Utopia for text, Fourier for math and Latin Modern for sans-serif and monospaced text. 
+The fonts used by this template depend on which version of \LaTeX{} you use. Regular \LaTeX, \emph{i.e.}, if you compile your document with with \texttt{latex}, \texttt{pslatex} or \texttt{pdflatex}, will use Utopia for text, Fourier for math and Latin Modern for sans-serif and monospaced text.
 However, if you want to adhere to the TU Delft house style, you will need to use \XeLaTeX, as it supports TrueType and OpenType fonts. Compiling with \texttt{xelatex} will use Arial for most titles and text, Courier New for monospace and Cambria for math. If you want to haf a sans-serif font for the
-main text, while using \texttt{latex}, \texttt{pslatex} or \texttt{pdflatex}, you can use the option \texttt{noroman} in the report style: 
+main text, while using \texttt{latex}, \texttt{pslatex} or \texttt{pdflatex}, you can use the option \texttt{noroman} in the report style:
 \begin{verbatim}
    \documentclass[...,noroman]{tudelft-report}
 \end{verbatim}
 For document and part titles,  TU Delft Ultra Light is used. For quotes, columns and text in boxes, you use Georgia. If you want to use \XeLaTeX, but do not want to use the TU Delft house style fonts, you can add the \texttt{nativefonts} option to the document class. This will still use  TU Delft Utra Light and Arial on the cover, but not for the body of the document. If you need to use these fonts for certain sections in the main text, they are available via \verb|\tudrmfamily| (Georgia) and \verb|\tudtitlefamily| (TU Delft Utra Light).
 
 \begin{quote}
-  You have to learn the rules of the game. And then you have to play better than anyone else.\\
-  \emph{Albert Einstein}
+    You have to learn the rules of the game. And then you have to play better than anyone else.\\
+    \emph{Albert Einstein}
 \end{quote}
 
-The corporate colors of the TU Delft are cyan, black and white, available via 
-{\color{tudelft-cyan}\verb|\color{tudelft-cyan}|}, 
-{\color{tudelft-black}\verb|\color{tudelft-black}|} 
-(which differs slightly from the default 
-{\color{black}\verb|\color{black}|}) 
-and \verb|\color{tudelft-white}|, respectively. 
-Apart from these three, the house style defines the basic colors \texttt{\color{tudelft-sea-green}tudelft-sea-green}, \texttt{\color{tudelft-green}tudelft-green}, \texttt{\color{tudelft-dark-blue}tudelft-dark-blue}, \texttt{\color{tudelft-purple}tudelft-purple}, \texttt{\color{tudelft-turquoise}tudelft-turquoise} and \texttt{\color{tudelft-sky-blue}tudelft-sky-blue}, as well as the accent colors \texttt{\color{tudelft-lavendel}tudelft-lavendel}, \texttt{\color{tudelft-orange}tudelft-orange}, \texttt{\color{tudelft-warm-purple}tudelft-warm-purple}, \texttt{\color{tudelft-fuchsia}tudelft-fuchsia}, \texttt{\color{tudelft-bright-green}tudelft-bright-green} and \texttt{\color{tudelft-yellow}tudelft-yellow}.
+The corporate colors of the TU Delft are cyan, black and white, available via
+    {\color{tudelft-cyan}\verb|\color{tudelft-cyan}|},
+{\color{tudelft-black}\verb|\color{tudelft-black}|}
+(which differs slightly from the default
+    {\color{black}\verb|\color{black}|})
+and \verb|\color{tudelft-white}|, respectively.
 
+Apart from these three, the house style defines the accent colors:
+
+\begin{itemize}
+    \item {\color{tudelft-dark-blue}\verb|\color{tudelft-dark-blue}|}
+    \item {\color{tudelft-sea-green}\verb|\color{tudelft-sea-green}|}
+    \item {\color{tudelft-turquoise}\verb|\color{tudelft-turquoise}|}
+    \item {\color{tudelft-light-turquoise}\verb|\color{tudelft-light-turquoise}|}
+    \item {\color{tudelft-gray-cyan}\verb|\color{tudelft-gray-cyan}|}
+    \item {\color{tudelft-sky-blue}\verb|\color{tudelft-sky-blue}|}
+    \item {\color{tudelft-green}\verb|\color{tudelft-green}|}
+    \item {\color{tudelft-yellow}\verb|\color{tudelft-yellow}|}
+    \item {\color{tudelft-red}\verb|\color{tudelft-red}|}
+    \item {\color{tudelft-orange}\verb|\color{tudelft-orange}|}
+\end{itemize}
