Whitelogo in the report.tex working

--- a/report.tex
+++ b/report.tex
@@ -1,4 +1,4 @@
-\documentclass[whitelogo]{tudelft-report}
+\documentclass[]{tudelft-report}
 
 \usepackage{biblatex}
 \addbibresource{report.bib}
@@ -47,7 +47,7 @@
     ISBN 000-00-0000-000-0
 }
 \setpagecolor{tudelft-cyan}
-\makecover[split]
+\makecover[split,whitelogo]
 
 
 %% Include an optional title page.
