--- a/report.tex
+++ b/report.tex
@@ -44,10 +44,10 @@
     multiple
     lines
     \vfill
-    ISBN 000-00-0000-000-0
+    ISBN 000-00-0000-000-0 % chktex 8
 }
 \setpagecolor{tudelft-cyan}
-\makecover[split,whitelogo]
+\makecover[split, whitelogo]
 
 
 %% Include an optional title page.
@@ -58,7 +58,7 @@
 \tableofcontents
 
 %% Use Arabic numerals for the page numbers of the chapters.
-\mainmatter
+\mainmatter{}
 
 \input{chapter-1}
 
@@ -67,7 +67,7 @@
 
 %\input{appendix-a}
 
-\printbibliography
+\printbibliography{}
 
 \end{document}
 
