--- a/report.tex
+++ b/report.tex
@@ -1,9 +1,13 @@
 \documentclass[]{tudelft-report}
 
-\usepackage{biblatex}
+%\usepackage{biblatex}
+
+\usepackage[backend=biber, style=citations/aiaa]{biblatex}
+%natbib=true, giveninits=true,
 \addbibresource{report.bib}
 
-\usepackage{changes}
+\makenomenclature{} % chktex 1
+
 \begin{document}
 
 %% Use Roman numerals for the page numbers of the title pages and table of
@@ -11,32 +15,32 @@
 \frontmatter
 
 %% Uncomment following 19 lines for a cover with a picture on the lower half only
-%\title[tudelft-white]{Title}
-%\subtitle[tudelft-cyan]{Optional subtitle}
-%\author[tudelft-white]{J.\ Random Author}
-%\affiliation{Technische Universiteit Delft}
-%\coverimage{cover.jpg}
-%\titleoffsetx{10cm}
-%\titleoffsety{10cm}
-%\afiloffsetx{1cm}
-%\afiloffsety{18cm}
-%\covertext[tudelft-white]{
-%    \textbf{Cover Text} \\
-%    possibly \\
-%    spanning 
-%    multiple 
-%    lines
-%    \vfill
-%    ISBN 000-00-0000-000-0
-%}
-%\makecover
+% \title[tudelft-white]{Title}
+% \subtitle[tudelft-cyan]{Optional subtitle}
+% \author[tudelft-white]{J.\ Random Author}
+% \affiliation{Technische Universiteit Delft}
+% \coverimage{cover.jpg}
+% \titleoffsetx{10cm}
+% \titleoffsety{10cm}
+% \afiloffsetx{1cm}
+% \afiloffsety{18cm}
+% \covertext[tudelft-white]{
+%     \textbf{Cover Text} \\
+%     possibly \\
+%     spanning
+%     multiple
+%     lines
+%     \vfill
+%     ISBN 000-00-0000-000-0 % chktex 8
+% }
+% \makecover{}
 
 %% Uncomment following 16 lines for a cover with a picture on the lower half only
 \title[tudelft-white]{Title}
 \subtitle[tudelft-black]{Optional subtitle}
 \author[tudelft-white]{J.\ Random Author}
 \affiliation{Technische Universiteit Delft}
-\coverimage{tank.jpg}
+\coverimage{cover_half.jpg}
 \covertext[tudelft-white]{
     \textbf{Cover Text} \\
     possibly \\
@@ -51,21 +55,32 @@
 
 
 %% Include an optional title page.
-\input{title}
+\include{title}
 
-\input{preface}
+\include{chapters/preface}
+
+\include{chapters/abstract}
 
 \tableofcontents
+
+% table of figures, tables, algorithms, etc.
+% nomenclature, abbreviations, symbols
 
 %% Use Arabic numerals for the page numbers of the chapters.
 \mainmatter{}
 
-\input{chapter-1}
+\include{chapters/introduction}
+
+\include{chapters/how_to_use}
+
+\include{chapters/conclusions}
+
+\include{chapters/recommendations}
 
 %% Use letters for the chapter numbers of the appendices.
 \appendix
 
-%\input{appendix-a}
+\include{appendices/appendix-a}
 
 \printbibliography{}
 
