--- a/src/tudelft-report.dtx
+++ b/src/tudelft-report.dtx
@@ -96,10 +96,11 @@
 \RequirePackage{float}
 
 \RequirePackage{siunitx}
-\RequirePackage{cleveref}
+\RequirePackage[noabbrev,capitalise]{cleveref}
 \RequirePackage{url}
 
 \RequirePackage{booktabs}
+\RequirePackage{multirow}
 
 \RequirePackage[ruled]{algorithm2e}
 
