--- a/src/tudelft-report.dtx
+++ b/src/tudelft-report.dtx
@@ -90,8 +90,8 @@
 \RequirePackage{changes}
 
 
-% Add nomenclature
-\RequirePackage{nomencl}
+
+\RequirePackage{nomencl} % Add nomenclature
 \RequirePackage{float}
 
 \RequirePackage{siunitx}
